Suppress URL from translations files

--- a/custom_components/versatile_thermostat/translations/de.json
+++ b/custom_components/versatile_thermostat/translations/de.json
@@ -5,7 +5,7 @@
     "step": {
       "user": {
         "title": "Typ des Versatile Thermostat",
-        "description": "Wählen Sie den Thermostattyp, den Sie erstellen möchten.&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/creation.md)",
+        "description": "Wählen Sie den Thermostattyp, den Sie erstellen möchten.",
         "data": {
           "thermostat_type": "Thermostattyp"
         },
@@ -51,7 +51,7 @@
       },
       "main": {
         "title": "Neues Versatile Thermostat",
-        "description": "Wichtigste notwendige Attribute&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/base-attributes.md)",
+        "description": "Wichtigste notwendige Attribute",
         "data": {
           "name": "Name",
           "thermostat_type": "Thermostattyp",
@@ -133,7 +133,7 @@
       },
       "tpi": {
         "title": "TPI",
-        "description": "Attribute des zeitproportionalen Integral (Time Proportional Integral)&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/algorithms.md#lalgorithme-tpi)",
+        "description": "Attribute des zeitproportionalen Integral (Time Proportional Integral)",
         "description_placeholders": {
           "over_switch_doc": {
             "text": "Dokumentation",
@@ -160,14 +160,14 @@
     },
     "presets": {
       "title": "Voreinstellungen",
-      "description": "Aktivieren zur Verwendung der zentralen Voreinstellungen bei diesem Thermostat. Für eigene Voreinstellungen des Thermostats, diese Option deaktivieren.&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/feature-presets.md)",
+      "description": "Aktivieren zur Verwendung der zentralen Voreinstellungen bei diesem Thermostat. Für eigene Voreinstellungen des Thermostats, diese Option deaktivieren.",
       "data": {
         "use_presets_central_config": "Verwenden der zentralen Voreinstellungen"
       }
     },
     "window": {
       "title": "Fensteröffnung verwalten",
-      "description": "Schaltet den Heizkörper aus, wenn Fenster offen ist. Entitäts-ID leer lassen, um die automatische Erkennung (auf Basis der Temperaturänderung) zu verwenden.&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/feature-window.md)",
+      "description": "Schaltet den Heizkörper aus, wenn Fenster offen ist. Entitäts-ID leer lassen, um die automatische Erkennung (auf Basis der Temperaturänderung) zu verwenden.",
       "data": {
         "window_sensor_entity_id": "Öffnungssensor (Entity-ID)",
         "window_delay": "Verzögerung der Erfassung beim Öffnen (Sekunden)",
@@ -191,7 +191,7 @@
     },
     "motion": {
       "title": "Verwaltung Bewegungserkennung",
-      "description": "Die Voreinstellung passt sich automatisch an, wenn eine Bewegung erkannt wird.\n'Voreinstellung bei Bewegung' und 'Voreinstellung ohne Bewegung' müssen mit den zu verwendenden Voreinstellungen ausgewählt werden.&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/feature-motion.md)",
+      "description": "Die Voreinstellung passt sich automatisch an, wenn eine Bewegung erkannt wird.\n'Voreinstellung bei Bewegung' und 'Voreinstellung ohne Bewegung' müssen mit den zu verwendenden Voreinstellungen ausgewählt werden.",
       "data": {
         "motion_sensor_entity_id": "Bewegungsmelder",
         "motion_delay": "Aktivierungsverzögerung",
@@ -211,7 +211,7 @@
     },
     "power": {
       "title": "Powermanagement",
-      "description": "Wählt automatisch die Voreinstellung 'power', wenn der Stromverbrauch ein Maximum überschreitet.\nGibt die Entity-IDs der Sensoren an, die die Gesamtleistung und die maximal zulässige Leistung messen.\nGib anschließend die Leistung des Geräts an.\nAlle Sensoren und die Geräteleistung sollten die gleiche Einheit verwenden (kW oder W).&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/feature-power.md)",
+      "description": "Wählt automatisch die Voreinstellung 'power', wenn der Stromverbrauch ein Maximum überschreitet.\nGibt die Entity-IDs der Sensoren an, die die Gesamtleistung und die maximal zulässige Leistung messen.\nGib anschließend die Leistung des Geräts an.\nAlle Sensoren und die Geräteleistung sollten die gleiche Einheit verwenden (kW oder W).",
       "data": {
         "power_sensor_entity_id": "Gesamtleistungssensor (Entity-ID)",
         "max_power_sensor_entity_id": "Sensor für maximale Leistung (Entity-ID)",
@@ -227,7 +227,7 @@
     },
     "presence": {
       "title": "Verwaltung Anwesenheit",
-      "description": "Geben Sie einen Präsenzsensor (Status true, wenn jemand anwesend ist) und die bei Abwesenheit zu verwendenden Zieltemperaturen an.&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/feature-presence.md)",
+      "description": "Geben Sie einen Präsenzsensor (Status true, wenn jemand anwesend ist) und die bei Abwesenheit zu verwendenden Zieltemperaturen an.",
       "data": {
         "presence_sensor_entity_id": "Anwesenheitssensor",
         "use_presence_central_config": "Verwendung der zentralen Temperaturkonfiguration bei Abwesenheit. Abwählen, um spezifische Temperaturen zu verwenden."
@@ -238,7 +238,7 @@
     },
     "advanced": {
       "title": "Erweiterte Einstellungen",
-      "description": "Konfiguration der erweiterten Einstellungen. Belassen Sie die Standardwerte, wenn Sie nicht wissen, was Sie tun.\nDiese Einstellungen können zu Fehlfunktionen des Thermostats führen.&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/feature-advanced.md)",
+      "description": "Konfiguration der erweiterten Einstellungen. Belassen Sie die Standardwerte, wenn Sie nicht wissen, was Sie tun.\nDiese Einstellungen können zu Fehlfunktionen des Thermostats führen.",
       "data": {
         "safety_delay_min": "Maximale Zeitspanne zwischen zwei Temperaturmessungen",
         "safety_min_on_percent": "Mindestprozentsatz der Leistung",
@@ -254,7 +254,7 @@
     },
     "central_boiler": {
       "title": "Steuerung der Zentralheizung",
-      "description": "Geben Sie die Dienste an, die zum Ein- und Ausschalten des Zentralheizungskessels aufgerufen werden sollen. Der aufzurufende Dienst muss wie folgt formatiert sein: `entity_id/service_name[/attribut:wert]` (/attribut:wert ist optional)\nBeispiel:\n- zum Einschalten eines Schalters: `switch.kesselsteuerung/switch.turn_on`\n- zum Ausschalten eines Schalters: `switch.kesselsteuerung/switch. turn_off`\n- Um den Heizkessel auf 25 °C zu programmieren und somit sein Einschalten zu erzwingen: `climate.heizungsthermostat/climate.set_temperature/temperature:25`\n- Um 10 °C an den Heizkessel zu senden und somit sein Ausschalten zu erzwingen: `climate.heizungsthermostat/climate.set_temperature/temperature:10`&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/feature-central-boiler.md)",
+      "description": "Geben Sie die Dienste an, die zum Ein- und Ausschalten des Zentralheizungskessels aufgerufen werden sollen. Der aufzurufende Dienst muss wie folgt formatiert sein: `entity_id/service_name[/attribut:wert]` (/attribut:wert ist optional)\nBeispiel:\n- zum Einschalten eines Schalters: `switch.kesselsteuerung/switch.turn_on`\n- zum Ausschalten eines Schalters: `switch.kesselsteuerung/switch. turn_off`\n- Um den Heizkessel auf 25 °C zu programmieren und somit sein Einschalten zu erzwingen: `climate.heizungsthermostat/climate.set_temperature/temperature:25`\n- Um 10 °C an den Heizkessel zu senden und somit sein Ausschalten zu erzwingen: `climate.heizungsthermostat/climate.set_temperature/temperature:10`",
       "data": {
         "central_boiler_activation_service": "Befehl zum Einschalten",
         "central_boiler_deactivation_service": "Befehl zum Ausschalten",
@@ -268,7 +268,7 @@
     },
     "valve_regulation": {
       "title": "Selbstregulierung durch Ventil",
-      "description": "Konfiguration der Selbstregelung durch direkte Ventilsteuerung&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/self-regulation.md#auto-régulation-par-contrôle-direct-de-la-vanne)",
+      "description": "Konfiguration der Selbstregelung durch direkte Ventilsteuerung",
       "data": {
         "offset_calibration_entity_ids": "Offset Kalibrierung Entity-IDs",
         "opening_degree_entity_ids": "Öffnungswinkel Entity-IDs",
@@ -292,7 +292,7 @@
     },
     "sync_device_internal_temp": {
       "title": "Synchronize device internal temperature",
-      "description": "Configuration to synchronize the internal temperature of the underlying devices with selected entities&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/en/feature-sync_device_temp.md)",
+      "description": "Configuration to synchronize the internal temperature of the underlying devices with selected entities",
       "data": {
         "sync_with_calibration": "Apply offset calibration",
         "sync_entity_ids": "Entities id used for synchronization"
@@ -347,7 +347,7 @@
   "step": {
     "user": {
       "title": "Typ - {name}",
-      "description": "Wählen Sie den Thermostattyp, den Sie erstellen möchten.&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/creation.md)",
+      "description": "Wählen Sie den Thermostattyp, den Sie erstellen möchten.",
       "data": {
         "thermostat_type": "Thermostattyp"
       },
@@ -395,7 +395,7 @@
     },
     "main": {
       "title": "Attribute - {name}",
-      "description": "Wichtigste erforderliche Attribute&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/base-attributes.md)",
+      "description": "Wichtigste erforderliche Attribute",
       "data": {
         "name": "Name",
         "thermostat_type": "Thermostattyp",
@@ -477,7 +477,7 @@
     },
     "tpi": {
       "title": "TPI (Zeitproportionales Integral) - {name}",
-      "description": "Attribute des Algorithmus 'zeitproportionales Integral'&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/algorithms.md#lalgorithme-tpi)",
+      "description": "Attribute des Algorithmus 'zeitproportionales Integral'",
       "description_placeholders": {
         "over_switch_doc": {
           "text": "Dokumentation",
@@ -504,14 +504,14 @@
   },
   "presets": {
     "title": "Voreinstellungen - {name}",
-    "description": "Auswählen, wenn das Thermostat die zentrale Voreinstellungen verwenden soll. Deaktivieren und der Thermostat hat seine eigenen Voreinstellungseinheiten.&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/feature-presets.md)",
+    "description": "Auswählen, wenn das Thermostat die zentrale Voreinstellungen verwenden soll. Deaktivieren und der Thermostat hat seine eigenen Voreinstellungseinheiten.",
     "data": {
       "use_presets_central_config": "Zentrale Voreinstellungen verwenden"
     }
   },
   "window": {
     "title": "Fenster - {name}",
-    "description": "Schaltet den Heizkörper aus, wenn das Fenster offen ist.\nIst keine Entity-ID angegeben, wird die automatische Erkennung von geöffneten Fenstern verwendet&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/feature-window.md)",
+    "description": "Schaltet den Heizkörper aus, wenn das Fenster offen ist.\nIst keine Entity-ID angegeben, wird die automatische Erkennung von geöffneten Fenstern verwendet",
     "data": {
       "window_sensor_entity_id": "Öffnungssensor (Entity-ID)",
       "window_delay": "Verzögerung bei 'Offen' (Sekunden)",
@@ -535,7 +535,7 @@
   },
   "motion": {
     "title": "Bewegung (Motion) - {name}",
-    "description": "Die Voreinstellung passt sich automatisch an, wenn eine Bewegung erkannt wird.\n'Voreinstellung bei Bewegung' und 'Voreinstellung ohne Bewegung müssen mit den zu verwendenden Voreinstellungen ausgewählt werden&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/feature-motion.md)",
+    "description": "Die Voreinstellung passt sich automatisch an, wenn eine Bewegung erkannt wird.\n'Voreinstellung bei Bewegung' und 'Voreinstellung ohne Bewegung müssen mit den zu verwendenden Voreinstellungen ausgewählt werden",
     "data": {
       "motion_sensor_entity_id": "Bewegungssensor",
       "motion_delay": "Einschaltverzögerung",
@@ -555,7 +555,7 @@
   },
   "power": {
     "title": "Powermanagement - {name}",
-    "description": "Wählt automatisch die Voreinstellung 'power', wenn der Stromverbrauch ein Maximum überschreitet. Gib ie die Entity-IDs der Sensoren an, die die Gesamtleistung und die maximal zulässige Leistung messen. Gib anschließend die Leistung des Geräts an. Alle Sensoren und der Stromverbrauch des Geräts müssen dieselbe Maßeinheit haben (kW oder W)&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/feature-power.md)",
+    "description": "Wählt automatisch die Voreinstellung 'power', wenn der Stromverbrauch ein Maximum überschreitet. Gib ie die Entity-IDs der Sensoren an, die die Gesamtleistung und die maximal zulässige Leistung messen. Gib anschließend die Leistung des Geräts an. Alle Sensoren und der Stromverbrauch des Geräts müssen dieselbe Maßeinheit haben (kW oder W)",
     "data": {
       "power_sensor_entity_id": "Gesamtleistung",
       "max_power_sensor_entity_id": "Leistungssensor Max (Entity-ID)",
@@ -571,7 +571,7 @@
   },
   "presence": {
     "title": "Anwesenheit - {name}",
-    "description": "Gib einen Präsenzsensor (true, wenn jemand anwesend ist) und die bei Abwesenheit zu verwendenden Zieltemperaturen an.&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/feature-presence.md)",
+    "description": "Gib einen Präsenzsensor (true, wenn jemand anwesend ist) und die bei Abwesenheit zu verwendenden Zieltemperaturen an.",
     "data": {
       "presence_sensor_entity_id": "Anwesenheitssensor",
       "use_presence_central_config": "Zentrale Temperaturkonfiguration bei Abweseheit benutzen. Nicht setzen bei dedizierten Temperatureinstellungen."
@@ -582,7 +582,7 @@
   },
   "advanced": {
     "title": "Erweitert - {name}",
-    "description": "Konfiguration der erweiterten Parameter. Belassen Sie die Standardwerte, wenn Sie nicht wissen, was Sie tun.\nDiese Einstellugen können zu Fehlfunktionen des Thermostats führen.&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/feature-advanced.md)",
+    "description": "Konfiguration der erweiterten Parameter. Belassen Sie die Standardwerte, wenn Sie nicht wissen, was Sie tun.\nDiese Einstellugen können zu Fehlfunktionen des Thermostats führen.",
     "data": {
       "minimal_activation_delay": "Minimale Aktivierungsverzögerung",
       "minimal_deactivation_delay": "Minimale Deaktivierungsverzögerung",
@@ -602,7 +602,7 @@
   },
   "central_boiler": {
     "title": "Steuerung der Zentralheizung - {name}",
-    "description": "Geben Sie die Dienste ein, die zum Ein- und Ausschalten der Zentralheizung benutzt werden sollen. Der verwendete Dienst muss wie folgt formatiert sein: `entity_id/service_name[/attribute:wert]` (/attribute:wert ist optional)\nBeispiel:\n- zum Einschalten eines Schalters: `switch.control_heizung/switch.turn_on`\n- zum ausschalten eines Schalter: `switch.control_heizung/switch.turn_off`\n- Um den Kessel auf 25° zu programmieren und somit ein Einschalten zu erzwingen: `climate.thermostat_heizung/climate.set_temperature/temperature:25`\n- Um 10° an den Heizessel zu senden und so sein Ausschalten zu erzwingen: `climate.thermostat_heizung/climate.set_temperature/temperature:10`&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/feature-central-boiler.md)",
+    "description": "Geben Sie die Dienste ein, die zum Ein- und Ausschalten der Zentralheizung benutzt werden sollen. Der verwendete Dienst muss wie folgt formatiert sein: `entity_id/service_name[/attribute:wert]` (/attribute:wert ist optional)\nBeispiel:\n- zum Einschalten eines Schalters: `switch.control_heizung/switch.turn_on`\n- zum ausschalten eines Schalter: `switch.control_heizung/switch.turn_off`\n- Um den Kessel auf 25° zu programmieren und somit ein Einschalten zu erzwingen: `climate.thermostat_heizung/climate.set_temperature/temperature:25`\n- Um 10° an den Heizessel zu senden und so sein Ausschalten zu erzwingen: `climate.thermostat_heizung/climate.set_temperature/temperature:10`",
     "data": {
       "central_boiler_activation_service": "Einschaltbefehl",
       "central_boiler_deactivation_service": "Ausschaltbefehl",
@@ -616,7 +616,7 @@
   },
   "valve_regulation": {
     "title": "Selbstregulierung durch Ventil",
-    "description": "Konfiguration der Selbstregelung durch direkte Ventilsteuerung&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/self-regulation.md#auto-régulation-par-contrôle-direct-de-la-vanne)",
+    "description": "Konfiguration der Selbstregelung durch direkte Ventilsteuerung",
     "data": {
       "offset_calibration_entity_ids": "Offset Kalibrierung Entity-IDs",
       "opening_degree_entity_ids": "Öffnungswinkel Entity-IDs",
@@ -640,7 +640,7 @@
   },
   "sync_device_internal_temp": {
     "title": "Synchronize device internal temperature",
-    "description": "Configuration to synchronize the internal temperature of the underlying devices with selected entities&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/feature-sync_device_temp.md)",
+    "description": "Configuration to synchronize the internal temperature of the underlying devices with selected entities",
     "data": {
       "sync_with_calibration": "Apply offset calibration",
       "sync_entity_ids": "Entities id used for synchronization"
